# VibeThing

./: .gitignore  README.md
stm32/: README.md  format.sh
stm32/blink/: cross-arm-none-eabi.ini  meson.build
stm32/blink/linker/: STM32F103C8Tx_FLASH.ld
stm32/blink/src/: main.c
stm32/blink/startup/: startup_stm32f103xb.s
stm32/blinky/: CMakeLists.txt  README.md  blinky.c  build.sh
stm32/freertos/: CMakeLists.txt  README.md  build.sh  main.cpp  main.h
zigbee_on_off_switch/main/: esp_zb_switch.c
